@@ -1,4 +1,5 @@
 2.1.15
+ * Avoid holding SSTableReaders for duration of incremental repair (CASSANDRA-11739)
  * Fix paging on DISTINCT queries repeats result when first row in partition changes (CASSANDRA-11679)
  * Add option to disable use of severity in DynamicEndpointSnitch (CASSANDRA-11737)
  * cqlsh COPY FROM fails for null values with non-prepared statements (CASSANDRA-11631)
